// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`regression tests test-files/issues/issue-134-multiline-template.html 1`] = `[]`;

exports[`regression tests test-files/issues/issue-138-srcset-line-wrapping.html 1`] = `[]`;

exports[`regression tests test-files/issues/issue-154-case-insensitive-attr.html 1`] = `[]`;

exports[`regression tests test-files/issues/issue-299/aria.html 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "test-files/issues/issue-299/aria.html",
    "messages": [
      {
        "column": 10,
        "context": {
          "id": "foo,-bar",
          "kind": 4,
        },
        "line": 2,
        "message": "element id "foo,-bar" must only contain letters, digits, dash and underscore characters",
        "offset": 73,
        "ruleId": "valid-id",
        "ruleUrl": "https://html-validate.org/rules/valid-id.html",
        "selector": "#foo\\,-bar",
        "severity": 2,
        "size": 8,
      },
    ],
    "source": "<div aria-controls="foo,-bar" aria-labelledby="foo,-bar"></div>
<div id="foo,-bar"></div>
",
    "warningCount": 0,
  },
]
`;

exports[`regression tests test-files/issues/issue-299/id.html 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "test-files/issues/issue-299/id.html",
    "messages": [
      {
        "column": 10,
        "context": {
          "id": "foo,-bar",
          "kind": 4,
        },
        "line": 1,
        "message": "element id "foo,-bar" must only contain letters, digits, dash and underscore characters",
        "offset": 9,
        "ruleId": "valid-id",
        "ruleUrl": "https://html-validate.org/rules/valid-id.html",
        "selector": "#foo\\,-bar",
        "severity": 2,
        "size": 8,
      },
    ],
    "source": "<div id="foo,-bar"></div>
",
    "warningCount": 0,
  },
]
`;

exports[`regression tests test-files/issues/issue-299/input-label.html 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "test-files/issues/issue-299/input-label.html",
    "messages": [
      {
        "column": 8,
        "line": 1,
        "message": "Redundant "for" attribute",
        "offset": 7,
        "ruleId": "no-redundant-for",
        "ruleUrl": "https://html-validate.org/rules/no-redundant-for.html",
        "selector": "label",
        "severity": 2,
        "size": 3,
      },
      {
        "column": 13,
        "context": {
          "id": "foo,-bar",
          "kind": 4,
        },
        "line": 2,
        "message": "element id "foo,-bar" must only contain letters, digits, dash and underscore characters",
        "offset": 35,
        "ruleId": "valid-id",
        "ruleUrl": "https://html-validate.org/rules/valid-id.html",
        "selector": "#foo\\,-bar",
        "severity": 2,
        "size": 8,
      },
    ],
    "source": "<label for="foo,-bar">
	<input id="foo,-bar" type="checkbox">
</label>
",
    "warningCount": 0,
  },
]
`;

exports[`regression tests test-files/issues/issue27-disable-block.html 1`] = `[]`;

exports[`regression tests test-files/issues/issue35-dynamic-values.html 1`] = `[]`;

exports[`regression tests test-files/issues/issue51-cond-comment.html 1`] = `
[
  {
    "errorCount": 8,
    "filePath": "test-files/issues/issue51-cond-comment.html",
    "messages": [
      {
        "column": 1,
        "line": 2,
        "message": "Use of conditional comments are deprecated",
        "offset": 16,
        "ruleId": "no-conditional-comment",
        "ruleUrl": "https://html-validate.org/rules/no-conditional-comment.html",
        "selector": null,
        "severity": 2,
        "size": 17,
      },
      {
        "column": 60,
        "line": 2,
        "message": "Use of conditional comments are deprecated",
        "offset": 75,
        "ruleId": "no-conditional-comment",
        "ruleUrl": "https://html-validate.org/rules/no-conditional-comment.html",
        "selector": null,
        "severity": 2,
        "size": 12,
      },
      {
        "column": 1,
        "line": 3,
        "message": "Use of conditional comments are deprecated",
        "offset": 88,
        "ruleId": "no-conditional-comment",
        "ruleUrl": "https://html-validate.org/rules/no-conditional-comment.html",
        "selector": null,
        "severity": 2,
        "size": 14,
      },
      {
        "column": 60,
        "line": 3,
        "message": "Use of conditional comments are deprecated",
        "offset": 147,
        "ruleId": "no-conditional-comment",
        "ruleUrl": "https://html-validate.org/rules/no-conditional-comment.html",
        "selector": null,
        "severity": 2,
        "size": 12,
      },
      {
        "column": 1,
        "line": 4,
        "message": "Use of conditional comments are deprecated",
        "offset": 160,
        "ruleId": "no-conditional-comment",
        "ruleUrl": "https://html-validate.org/rules/no-conditional-comment.html",
        "selector": null,
        "severity": 2,
        "size": 14,
      },
      {
        "column": 60,
        "line": 4,
        "message": "Use of conditional comments are deprecated",
        "offset": 219,
        "ruleId": "no-conditional-comment",
        "ruleUrl": "https://html-validate.org/rules/no-conditional-comment.html",
        "selector": null,
        "severity": 2,
        "size": 12,
      },
      {
        "column": 1,
        "line": 5,
        "message": "Use of conditional comments are deprecated",
        "offset": 232,
        "ruleId": "no-conditional-comment",
        "ruleUrl": "https://html-validate.org/rules/no-conditional-comment.html",
        "selector": null,
        "severity": 2,
        "size": 17,
      },
      {
        "column": 5,
        "line": 7,
        "message": "Use of conditional comments are deprecated",
        "offset": 290,
        "ruleId": "no-conditional-comment",
        "ruleUrl": "https://html-validate.org/rules/no-conditional-comment.html",
        "selector": "html",
        "severity": 2,
        "size": 12,
      },
    ],
    "source": "<!DOCTYPE html>
<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
<!--[if gt IE 8]><!-->
<html class="no-js" lang="en">
<!--<![endif]-->
<head>
<title>whatever</title>
</head>
<body>
<p>whatever</p>
</body>
</html>
",
    "warningCount": 0,
  },
]
`;

exports[`regression tests test-files/issues/issue128-id-whitespace.html 1`] = `
[
  {
    "errorCount": 3,
    "filePath": "test-files/issues/issue128-id-whitespace.html",
    "messages": [
      {
        "column": 13,
        "context": {
          "allowed": {
            "enum": [
              /\\^\\\\S\\+\\$/,
            ],
          },
          "attribute": "for",
          "element": "label",
          "value": "foo bar",
        },
        "line": 4,
        "message": "Attribute "for" has invalid value "foo bar"",
        "offset": 257,
        "ruleId": "attribute-allowed-values",
        "ruleUrl": "https://html-validate.org/rules/attribute-allowed-values.html",
        "selector": "label",
        "severity": 2,
        "size": 7,
      },
      {
        "column": 24,
        "context": {
          "id": "foo bar",
          "kind": 2,
        },
        "line": 7,
        "message": "element id "foo bar" must not contain whitespace",
        "offset": 390,
        "ruleId": "valid-id",
        "ruleUrl": "https://html-validate.org/rules/valid-id.html",
        "selector": "#foo\\ bar",
        "severity": 2,
        "size": 7,
      },
      {
        "column": 24,
        "context": {
          "allowed": {
            "enum": [
              /\\^\\\\S\\+\\$/,
            ],
          },
          "attribute": "id",
          "element": "input",
          "value": "foo bar",
        },
        "line": 7,
        "message": "Attribute "id" has invalid value "foo bar"",
        "offset": 390,
        "ruleId": "attribute-allowed-values",
        "ruleUrl": "https://html-validate.org/rules/attribute-allowed-values.html",
        "selector": "#foo\\ bar",
        "severity": 2,
        "size": 7,
      },
    ],
    "source": "<!-- In both of these cases errors will be yielded (as id cannot contain whitespace) but neither the parser or any rule should choke on it -->

<!-- this will yield an expected attribute-allowed-values error as for cannot contain whitespace -->
<label for="foo bar">lorem ipsum</label>

<!-- this will yield both an expected attribute-allowed-values and valid-id -->
<input type="text" id="foo bar">
",
    "warningCount": 0,
  },
]
`;
